# AnimaNLU

nlu-training/: analyze_ignore_ratio.py  augment_supplements.py  benchmark_focal.py  calibrate.py  config.yaml  evaluate.py  export_onnx.py  extract_dialogues.py  labels.py  model.py  prepare_data.py  pyproject.toml  run.py  smoke_test_synthetic.py  test_optimized_focal.py  train.py
nlu-training/data/classify_batches/: batch_00.json  batch_01.json  batch_02.json  batch_03.json  batch_04.json  batch_05.json  batch_06.json  batch_07.json  batch_08.json  batch_09.json  batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json  batch_19.json  batch_20.json  batch_21.json  batch_22.json  batch_23.json  batch_24.json  batch_25.json  batch_26.json  batch_27.json  batch_28.json  batch_29.json  batch_30.json  batch_31.json  batch_32.json  batch_33.json  batch_34.json  batch_35.json  batch_36.json  batch_37.json  batch_38.json  batch_39.json
nlu-training/data/classify_results/: results_00_01.json  results_02.json  results_03.json  results_04_05.json  results_06.json  results_07.json  results_08.json  results_09.json  results_10_11.json  results_12.json  results_13.json  results_14.json  results_15.json  results_16_17.json  results_18.json  results_19.json  results_20_21.json  results_22.json  results_23.json  results_24_25.json  results_26.json  results_27.json  results_28_29.json  results_30_31.json  results_32_33.json  results_34.json  results_35.json  results_36_37.json  results_38.json  (+1 more)
(+101 files in other folders)
